# s-pool

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
documentation/: CMakeLists.txt  conf.py  design.rst  index.rst
